Updated form stuck at PENDING state bug

--- a/src/app/components/main/contact-edit/contact-edit.component.scss
+++ b/src/app/components/main/contact-edit/contact-edit.component.scss
@@ -43,6 +43,7 @@
 
 			&--invalid {
 				color: $warning-style;
+				font-size: 0.7rem;
 			}
 		}
 
